--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(70, 70, 70);
+  background-color: #111
 }
 
 *, ::before, ::after {
@@ -15,6 +15,13 @@ body {
   outline: none;
 }
 
+h1, p {
+  margin-bottom: 1rem;
+  @media screen and(min-width:768px) {
+    margin-bottom: 1.5rem;
+  }
+}
+
 button {
   background-color: transparent;
   border: none;
@@ -22,5 +29,5 @@ button {
 
 .test {
   width: 100%;
-  height: 200vh;
+  height: 50vh;
 }
