--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -8,6 +8,8 @@
     padding: 12px 4%;
     font-size: 0.9rem;
     color: white;
+    background: linear-gradient(to bottom, rgba(74, 74, 74, 0.6), rgba(0, 0, 0, 0));
+    transition: background-color 0.3s ease-in-out;
     a {
         color: white;
         text-decoration: none;
@@ -28,6 +30,7 @@
     }
     &__links {
         margin-left: 20px;
+        transition: background-color 0.3s ease-in-out;
         .nav__link {
             text-decoration: none;
             padding: 5px 10px;
