--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    z-index: 1;
     position: fixed;
     width: 100%;
     padding: 12px 4%;
@@ -13,6 +14,10 @@
     a {
         color: white;
         text-decoration: none;
+    }
+    .container {
+        max-width: 980px;
+        margin: 0 auto;
     }
     &--black {
         background-color: black;
