--- a/src/App.scss
+++ b/src/App.scss
@@ -15,11 +15,15 @@ body {
   outline: none;
 }
 
-h1, p {
+h1, h3, p {
   margin-bottom: 1rem;
   @media screen and(min-width:768px) {
     margin-bottom: 1.5rem;
   }
+}
+
+a {
+  text-decoration: none;
 }
 
 button {
